--- a/index.html
+++ b/index.html
@@ -17,15 +17,14 @@
     </style>
 </head>
 <body>
-
-    <nav>
-        <a href="index.html">Home</a>
-        <a href="team.html">Team</a>
-        <a href="publications.html">Publications</a>
-        <a href="research.html">Research</a>
-        <a href="news.html">News</a>
-        <a href="contact.html">Contact</a>
-    </nav>
+	<nav>
+		<a href="/">Home</a>
+		<a href="/team/">Team</a>
+		<a href="/publications/">Publications</a>
+		<a href="/research/">Research</a>
+		<a href="/news/">News</a>
+		<a href="/contact/">Contact</a>
+	</nav>
 
     <div class="lab-title">
         <h1>Materials Informatics Strategies Laboratory – MISLab</h1>
