--- a/index.html
+++ b/index.html
@@ -5,26 +5,73 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MISLab - Home</title>
     <style>
-        body { font-family: 'Arial', sans-serif; margin: 0; padding: 0; background-color: #f5f5f5; overflow-y: scroll;}
-        header { background-color: #003366; color: white; text-align: center; padding: 10px 0; }
-        nav { background-color: #002244; padding: 10px 0; text-align: center; }
-        nav a { color: white; margin: 0 15px; text-decoration: none; font-weight: bold; }
-        .lab-title { text-align: center; font-size: 24px; margin: 20px 0; }
-        .main-container { display: flex; justify-content: space-around; margin: 20px; }
-        .about { background-color: white; padding: 15px; width: 45%; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.1); }
-        .picture { background-color: white; width: 45%; height: 200px; display: flex; align-items: center; justify-content: center; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.1); }
-        .footer { background-color: #003366; color: white; text-align: center; padding: 10px 0; margin-top: 30px; }
+        body { 
+            font-family: 'Arial', sans-serif; 
+            margin: 0; 
+            padding: 0; 
+            background-color: #f5f5f5; 
+            padding-top: 60px; /* Adjust for fixed navbar */
+            overflow-y: scroll; 
+        }
+        nav { 
+            background-color: #002244; 
+            padding: 10px 0; 
+            text-align: center; 
+            position: fixed; 
+            top: 0; 
+            left: 0; 
+            right: 0; 
+            z-index: 1000; 
+        }
+        nav a { 
+            color: white; 
+            margin: 0 15px; 
+            text-decoration: none; 
+            font-weight: bold; 
+        }
+        .lab-title { 
+            text-align: center; 
+            font-size: 24px; 
+            margin: 20px 0; 
+        }
+        .main-container { 
+            display: flex; 
+            justify-content: space-around; 
+            margin: 20px auto; 
+            width: 95%; 
+            max-width: 1100px; 
+        }
+        .about, .picture { 
+            background-color: white; 
+            padding: 15px; 
+            width: 45%; 
+            border-radius: 8px; 
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1); 
+        }
+        .picture { 
+            display: flex; 
+            align-items: center; 
+            justify-content: center; 
+            height: 200px; 
+        }
+        .footer { 
+            background-color: #003366; 
+            color: white; 
+            text-align: center; 
+            padding: 10px 0; 
+            margin-top: 30px; 
+        }
     </style>
 </head>
 <body>
-	<nav>
-		<a href="/">Home</a>
-		<a href="/team/">Team</a>
-		<a href="/publications/">Publications</a>
-		<a href="/research/">Research</a>
-		<a href="/news/">News</a>
-		<a href="/contact/">Contact</a>
-	</nav>
+    <nav>
+        <a href="/">Home</a>
+        <a href="/team/">Team</a>
+        <a href="/publications/">Publications</a>
+        <a href="/research/">Research</a>
+        <a href="/news/">News</a>
+        <a href="/contact/">Contact</a>
+    </nav>
 
     <div class="lab-title">
         <h1>Materials Informatics Strategies Laboratory – MISLab</h1>
@@ -37,7 +84,7 @@
         </div>
 
         <div class="picture">
-            <p>[Insert Lab Picture Here]</p>
+            <img src="/images/lab-picture.jpg" alt="Lab Picture" style="max-width: 100%; max-height: 100%; object-fit: cover;">
         </div>
     </div>
 
