--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MISLab - Home</title>
+    <title>MIStraLab - Home</title>
     <style>
         body { 
             font-family: 'Arial', sans-serif; 
@@ -74,13 +74,13 @@
     </nav>
 
     <div class="lab-title">
-        <h1>Materials Informatics Strategies Laboratory – MISLab</h1>
+        <h1>Materials Informatics Strategies Laboratory – MIStraLab</h1>
     </div>
 
     <div class="main-container">
         <div class="about">
             <h3>About Part</h3>
-            <p>Welcome to MISLab, where we focus on cutting-edge research in materials informatics and strategic development...</p>
+            <p>Welcome to MIStraLab, where we focus on cutting-edge research in materials informatics and strategic development...</p>
         </div>
 
         <div class="picture">
