--- a/publications/index.html
+++ b/publications/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MISLab - Publications</title>
+    <title>MIStraLab - Publications</title>
     <style>
         body { 
             font-family: 'Arial', sans-serif; 
