--- a/contact/index.html
+++ b/contact/index.html
@@ -88,10 +88,11 @@
         <div class="contact-container">
             <div class="contact-info">
                 <p><strong>Dr. Name Surname</strong></p>
-                <p>Department of Materials Science</p>
-                <p>University of XYZ</p>
-                <p>1234 Research Lab Street</p>
-                <p>City, Country</p>
+		<p>Üniversiteler Mahallesi, Dumlupınar Bulvarı</p>
+                <p>Metallurgical and Materials Engineering Department, B-206</p>
+                <p>Middle East Technical University</p>
+                <p>No:1, 06800</p>
+                <p>Ankara, Turkiye</p>
                 <p>Email: example@university.edu</p>
             </div>
 
