--- a/contact/index.html
+++ b/contact/index.html
@@ -87,9 +87,9 @@
 
         <div class="contact-container">
             <div class="contact-info">
-                <p><strong>Dr. Name Surname</strong></p>
+                <p><strong>Assist. Prof. Dr. Irmak Sargın</strong></p>
 		<p>Üniversiteler Mahallesi, Dumlupınar Bulvarı</p>
-                <p>Metallurgical and Materials Engineering Department, B-206</p>
+                <p>Department of Metallurgical and Materials Engineering, B-206</p>
                 <p>Middle East Technical University</p>
                 <p>No:1, 06800</p>
                 <p>Ankara, Turkiye</p>
