--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     
     <nav>
     <a href="/" style="display: inline-block;">
-        <img src="/images/mistralab.png" alt="MIStraLab Logo" style="height: 40px; vertical-align: middle;">
+        <img src="/images/mistralab2.png" alt="MIStraLab Logo" style="height: 40px; vertical-align: middle;">
     </a>
     <a href="/">Home</a>
     <a href="/team/">Team</a>
