--- a/team/index.html
+++ b/team/index.html
@@ -65,15 +65,17 @@
     </style>
 </head>
 <body>
-
 	<nav>
-		<a href="/">Home</a>
-		<a href="/team/">Team</a>
-		<a href="/publications/">Publications</a>
-		<a href="/research/">Research</a>
-		<a href="/news/">News</a>
-		<a href="/contact/">Contact</a>
-	</nav>
+    		<a href="/" style="display: inline-block;">
+        	<img src="/images/mistralab2.png" alt="MIStraLab Logo" style="height: 40px; vertical-align: middle;">
+    		</a>
+    		<a href="/">Home</a>
+    		<a href="/team/">Team</a>
+    		<a href="/publications/">Publications</a>
+   		<a href="/research/">Research</a>
+   		<a href="/news/">News</a>
+    		<a href="/contact/">Contact</a>
+    	</nav>
 
     <div class="section">
         <h2 style="font-size: 36px; color: #002244; margin-bottom: 20px; text-align: center;">Members</h2>
