--- a/team/sargin/index.html
+++ b/team/sargin/index.html
@@ -71,13 +71,16 @@
 <body>
 
 	<nav>
-		<a href="/">Home</a>
-		<a href="/team/">Team</a>
-		<a href="/publications/">Publications</a>
-		<a href="/research/">Research</a>
-		<a href="/news/">News</a>
-		<a href="/contact/">Contact</a>
-	</nav>
+    		<a href="/" style="display: inline-block;">
+        	<img src="/images/mistralab2.png" alt="MIStraLab Logo" style="height: 40px; vertical-align: middle;">
+    		</a>
+    		<a href="/">Home</a>
+    		<a href="/team/">Team</a>
+    		<a href="/publications/">Publications</a>
+   		<a href="/research/">Research</a>
+   		<a href="/news/">News</a>
+    		<a href="/contact/">Contact</a>
+    	</nav>
 
     <div class="section">
         <div class="profile">
