--- a/contact/index.html
+++ b/contact/index.html
@@ -74,14 +74,16 @@
 </head>
 <body>
 	<nav>
-		<a href="/">Home</a>
-		<a href="/team/">Team</a>
-		<a href="/publications/">Publications</a>
-		<a href="/research/">Research</a>
-		<a href="/news/">News</a>
-		<a href="/contact/">Contact</a>
-	</nav>
-
+    		<a href="/" style="display: inline-block;">
+        	<img src="/images/mistralab2.png" alt="MIStraLab Logo" style="height: 40px; vertical-align: middle;">
+    		</a>
+    		<a href="/">Home</a>
+    		<a href="/team/">Team</a>
+    		<a href="/publications/">Publications</a>
+   		<a href="/research/">Research</a>
+   		<a href="/news/">News</a>
+    		<a href="/contact/">Contact</a>
+    	</nav>
     <div class="section">
         <h2>Contact</h2>
 
