--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     </nav>
 
     <div class="lab-title">
-        <h1>Materials Informatics Strategies Laboratory – MIStraLab</h1>
+        <h1>Materials Informatics Strategies Laboratory</h1>
     </div>
 
     <div class="main-container">
