--- a/index.html
+++ b/index.html
@@ -4,41 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MIStraLab - Home</title>
-    <style>
-        body { 
-            font-family: 'Arial', sans-serif; 
-            margin: 0; 
-            padding: 0; 
-            background-color: #f5f5f5; 
-            padding-top: 60px; /* Adjust for fixed navbar */
-            overflow-y: scroll; 
-        }
-        .lab-title { 
-            text-align: center; 
-            font-size: 24px; 
-            margin: 20px 0; 
-        }
-        .main-container { 
-            display: flex; 
-            justify-content: space-around; 
-            margin: 20px auto; 
-            width: 95%; 
-            max-width: 1100px; 
-        }
-        .about, .picture { 
-            background-color: white; 
-            padding: 15px; 
-            width: 45%; 
-            border-radius: 8px; 
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1); 
-        }
-        .picture { 
-            display: flex; 
-            align-items: center; 
-            justify-content: center; 
-            height: 200px; 
-        }
-    </style>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
 
