--- a/team/index.html
+++ b/team/index.html
@@ -7,36 +7,46 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="stylesheet" href="/css/style.css">
     <style>
-        /* Custom styling specific to the team page */
+        /* Team Page Specific Styling */
+        .section {
+            padding: 30px;
+            margin: 20px auto;
+            width: 95%;
+            max-width: 1100px;
+            background-color: white;
+            border-radius: 8px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
+
         .member {
             display: flex;
             align-items: flex-start;
             margin-bottom: 30px;
-            background-color: white;
-            padding: 15px;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
         }
+
         .member img {
             width: 160px;
             height: 213px; /* 4:3 aspect ratio */
             object-fit: cover;
             margin-right: 20px;
-            border-radius: 4px;
         }
+
         .member-info h3 a {
             text-decoration: none;
             color: #002244;
         }
+
         .icons {
             margin-top: 10px;
         }
+
         .icons a {
             margin-right: 10px;
             text-decoration: none;
             color: #002244;
             font-size: 18px;
         }
+
         .icons a:hover {
             color: #0056b3;
         }
@@ -44,8 +54,10 @@
 </head>
 <body>
 
+    <!-- Navbar -->
     <div id="navbar-placeholder"></div>
 
+    <!-- Members Section in a Single White Box -->
     <div class="section">
         <h2 class="page-title">Members</h2>
 
@@ -67,6 +79,7 @@
         </div>
 
         <h3>Master Students</h3>
+
         <div class="member">
             <img src="/images/student1-photo.jpg" alt="Student 1">
             <div class="member-info">
@@ -98,11 +111,12 @@
                 </div>
             </div>
         </div>
-
     </div>
 
+    <!-- Footer -->
     <div id="footer-placeholder"></div>
 
+    <!-- Navbar & Footer Loading -->
     <script>
         fetch('/partials/navbar.html')
             .then(response => response.text())
