--- a/publications/index.html
+++ b/publications/index.html
@@ -4,94 +4,59 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MIStraLab - Publications</title>
+    <link rel="stylesheet" href="/css/style.css">
     <style>
-        body { 
-            font-family: 'Arial', sans-serif; 
-            margin: 0; 
-            padding: 0; 
-            background-color: #f5f5f5;
-            padding-top: 60px;
-			overflow-y: scroll;
+        .section {
+            padding: 30px;
+            margin: 20px auto;
+            width: 95%;
+            max-width: 1100px;
+            background-color: white;
+            border-radius: 8px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         }
-        nav { 
-            background-color: #002244; 
-            padding: 10px 0; 
-            text-align: center; 
-            position: fixed; 
-            top: 0; 
-            left: 0; 
-            right: 0; 
-            z-index: 1000; 
-        }
-        nav a { 
-            color: white; 
-            margin: 0 15px; 
-            text-decoration: none; 
-            font-weight: bold; 
-        }
-        .section { 
-            padding: 30px; 
-            margin: 20px auto; 
-            width: 95%; 
-            max-width: 1100px; 
-            background-color: white; 
-            border-radius: 8px; 
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1); 
-        }
+
         h2 {
             font-size: 36px;
             text-align: center;
             color: #002244;
             margin-bottom: 20px;
         }
+
         .publications-list {
             padding-left: 20px;
         }
+
         .publications-list li {
             margin-bottom: 12px;
             line-height: 1.6;
         }
+
         .publications-list a {
             color: #002244;
             text-decoration: none;
             font-weight: bold;
         }
+
         .publications-list a:hover {
             text-decoration: underline;
-        }
-        .footer { 
-            background-color: #003366; 
-            color: white; 
-            text-align: center; 
-            padding: 12px 0; 
-            margin-top: 30px; 
         }
     </style>
 </head>
 <body>
 
-    
-    <nav>
-    <a href="/" style="display: inline-block;">
-        <img src="/images/mistralab2.png" alt="MIStraLab Logo" style="height: 40px; vertical-align: middle;">
-    </a>
-    <a href="/">Home</a>
-    <a href="/team/">Team</a>
-    <a href="/publications/">Publications</a>
-    <a href="/research/">Research</a>
-    <a href="/news/">News</a>
-    <a href="/contact/">Contact</a>
-    </nav>
+    <!-- Navbar -->
+    <div id="navbar-placeholder"></div>
 
     <div class="section">
         <h2>Publications</h2>
         <ul class="publications-list">
             <li>
-                Doe, J., Surname, N., et al. (2023). Title of the Research Paper. <em>Journal Name</em>. 
+                Doe, J., Sargin, I., et al. (2023). Title of the Research Paper. <em>Journal Name</em>. 
                 <a href="https://doi.org/10.1234/example1" target="_blank">[Link]</a>
             </li>
             <li>
-                Surname, N., et al. (2021). Another Paper Title. <em>Advanced Materials</em>. 
+                Sargin, I., et al. (2021). Another Paper Title. <em>Advanced Materials</em>. 
                 <a href="https://doi.org/10.1234/example2" target="_blank">[Link]</a>
             </li>
             <li>
@@ -106,9 +71,19 @@
         </ul>
     </div>
 
-    <div class="footer">
-        <p>Contact Us: Address | Email | Social Links</p>
-    </div>
+    <!-- Footer -->
+    <div id="footer-placeholder"></div>
+
+    <!-- Navbar & Footer Loading -->
+    <script>
+        fetch('/partials/navbar.html')
+            .then(response => response.text())
+            .then(data => document.getElementById('navbar-placeholder').innerHTML = data);
+
+        fetch('/partials/footer.html')
+            .then(response => response.text())
+            .then(data => document.getElementById('footer-placeholder').innerHTML = data);
+    </script>
 
 </body>
 </html>
