--- a/research/index.html
+++ b/research/index.html
@@ -92,7 +92,7 @@
             </div>
             <img src="research-area2.jpg" alt="Research Area 2">
         </div>
-
+    </div>
         <!-- You can add more research areas here in the same format -->
 
     <!-- Footer -->
