--- a/research/index.html
+++ b/research/index.html
@@ -78,7 +78,7 @@
         <h2>Research Areas</h2>
 
         <div class="research-item">
-            <img src="stat.jpg" alt="Research Area 1">
+            <img src="/images/stat.jpg" alt="Research Area 1">
             <div class="research-description">
                 <h3>Data-driven Materials Discovery</h3>
                 <p>Leveraging machine learning and computational techniques to accelerate the discovery and design of new materials.</p>
@@ -90,7 +90,7 @@
                 <h3>Computational Materials Science</h3>
                 <p>Using advanced simulations and modeling to understand the fundamental behavior of materials at the atomic scale.</p>
             </div>
-            <img src="matscicomp.jpg" alt="Research Area 2">
+            <img src="/images/matscicomp.jpg" alt="Research Area 2">
         </div>
     </div>
         <!-- You can add more research areas here in the same format -->
