--- a/index.html
+++ b/index.html
@@ -5,6 +5,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MIStraLab - Home</title>
     <link rel="stylesheet" href="/css/style.css">
+    <style>
+        .carousel-container {
+            position: relative;
+            width: 100%;
+            height: 200px;
+            overflow: hidden;
+            border-radius: 8px;
+        }
+
+        .carousel-slide {
+            display: flex;
+            transition: transform 0.5s ease-in-out;
+        }
+
+        .carousel-slide img {
+            width: 100%;
+            height: 200px;
+            object-fit: cover;
+        }
+
+        .carousel-btn {
+            position: absolute;
+            top: 50%;
+            transform: translateY(-50%);
+            background-color: rgba(0, 0, 0, 0.5);
+            color: white;
+            border: none;
+            cursor: pointer;
+            padding: 8px;
+            font-size: 18px;
+            z-index: 2;
+        }
+
+        .carousel-btn.left { left: 10px; }
+        .carousel-btn.right { right: 10px; }
+    </style>
 </head>
 <body>
 
@@ -22,7 +58,14 @@
         </div>
 
         <div class="picture">
-            <img src="/images/lab-picture.jpg" alt="Lab Picture" style="max-width: 100%; max-height: 100%; object-fit: cover;">
+            <div class="carousel-container">
+                <div class="carousel-slide">
+                    <img src="/images/kedos.jpg" alt="Lab Picture 1">
+                    <img src="/images/statb.jpg" alt="Lab Picture 2">
+                </div>
+                <button class="carousel-btn left" onclick="prevSlide()">&#10094;</button>
+                <button class="carousel-btn right" onclick="nextSlide()">&#10095;</button>
+            </div>
         </div>
     </div>
 
@@ -40,6 +83,32 @@
         fetch('/partials/footer.html')
             .then(response => response.text())
             .then(data => document.getElementById('footer-placeholder').innerHTML = data);
+
+        // Carousel Functionality
+        const slideContainer = document.querySelector('.carousel-slide');
+        const slides = document.querySelectorAll('.carousel-slide img');
+        let currentIndex = 0;
+        const totalSlides = slides.length;
+
+        function showSlide(index) {
+            if (index >= totalSlides) currentIndex = 0;
+            else if (index < 0) currentIndex = totalSlides - 1;
+            else currentIndex = index;
+
+            const offset = -currentIndex * 100;
+            slideContainer.style.transform = `translateX(${offset}%)`;
+        }
+
+        function nextSlide() {
+            showSlide(currentIndex + 1);
+        }
+
+        function prevSlide() {
+            showSlide(currentIndex - 1);
+        }
+
+        // Auto slide every 4 seconds
+        setInterval(nextSlide, 4000);
     </script>
 
 </body>
