--- a/team/index.html
+++ b/team/index.html
@@ -81,7 +81,7 @@
         <h3>Master Students</h3>
 
         <div class="member">
-            <img src="/images/student1-photo.jpg" alt="Student 1">
+            <img src="/images/kedos.jpg" alt="Student 1">
             <div class="member-info">
                 <h3><a href="/team/student1/">Name Surname</a></h3>
                 <p><strong>Education:</strong> M.Sc. in ...</p>
@@ -97,7 +97,7 @@
         </div>
 
         <div class="member">
-            <img src="/images/student2-photo.jpg" alt="Student 2">
+            <img src="/images/kedos.jpg" alt="Student 2">
             <div class="member-info">
                 <h3><a href="/team/student2/">Name Surname</a></h3>
                 <p><strong>Education:</strong> M.Sc. in ...</p>
