--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>MIStraLab - Home</title>
     <link rel="stylesheet" href="/css/style.css">
     <style>
+        /* Carousel Styles */
         .carousel-container {
             position: relative;
             width: 100%;
@@ -23,6 +24,7 @@
             width: 100%;
             height: 200px;
             object-fit: cover;
+            flex-shrink: 0;
         }
 
         .carousel-btn {
@@ -57,15 +59,14 @@
             <p>Welcome to MIStraLab, where we focus on cutting-edge research in materials informatics and strategic development...</p>
         </div>
 
-        <div class="picture">
-            <div class="carousel-container">
-                <div class="carousel-slide">
-                    <img src="/images/kedos.jpg" alt="Lab Picture 1">
-                    <img src="/images/statb.jpg" alt="Lab Picture 2">
-                </div>
-                <button class="carousel-btn left" onclick="prevSlide()">&#10094;</button>
-                <button class="carousel-btn right" onclick="nextSlide()">&#10095;</button>
+        <div class="carousel-container">
+            <div class="carousel-slide">
+                <img src="/images/lab-picture1.jpg" alt="Lab Picture 1">
+                <img src="/images/lab-picture2.jpg" alt="Lab Picture 2">
+                <img src="/images/lab-picture3.jpg" alt="Lab Picture 3">
             </div>
+            <button class="carousel-btn left" onclick="prevSlide()">&#10094;</button>
+            <button class="carousel-btn right" onclick="nextSlide()">&#10095;</button>
         </div>
     </div>
 
@@ -84,7 +85,7 @@
             .then(response => response.text())
             .then(data => document.getElementById('footer-placeholder').innerHTML = data);
 
-        // Carousel Functionality
+        // Carousel Script
         const slideContainer = document.querySelector('.carousel-slide');
         const slides = document.querySelectorAll('.carousel-slide img');
         let currentIndex = 0;
@@ -107,8 +108,7 @@
             showSlide(currentIndex - 1);
         }
 
-        // Auto slide every 4 seconds
-        setInterval(nextSlide, 4000);
+        setInterval(nextSlide, 4000); // Auto-slide every 4s
     </script>
 
 </body>
