--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
 
         <div class="carousel-container">
             <div class="carousel-slide">
-                <img src="/images/lab-picture1.jpg" alt="Lab Picture 1">
-                <img src="/images/lab-picture2.jpg" alt="Lab Picture 2">
-                <img src="/images/lab-picture3.jpg" alt="Lab Picture 3">
+                <img src="/images/kedos.jpg" alt="Lab Picture 1">
+                <img src="/images/statb.jpg" alt="Lab Picture 2">
+                <img src="/images/sargin.jpg" alt="Lab Picture 3">
             </div>
             <button class="carousel-btn left" onclick="prevSlide()">&#10094;</button>
             <button class="carousel-btn right" onclick="nextSlide()">&#10095;</button>
