--- a/team/index.html
+++ b/team/index.html
@@ -81,9 +81,9 @@
         <h3>Master Students</h3>
 
         <div class="member">
-            <img src="/images/kedos.jpg" alt="Student 1">
+            <img src="/images/ugurakbulut.jpg" alt="Student 1">
             <div class="member-info">
-                <h3><a href="/team/student1/">Name Surname</a></h3>
+                <h3><a href="/team/student1/">Rıza Uğur Akbulut</a></h3>
                 <p><strong>Education:</strong> M.Sc. in ...</p>
                 <p><strong>Research Area:</strong> Computational Materials Science...</p>
                 <div class="icons">
