--- a/team/index.html
+++ b/team/index.html
@@ -71,7 +71,7 @@
                 <div class="icons">
                     <a href="mailto:example@example.com" title="Email"><i class="fas fa-envelope"></i></a>
                     <a href="https://orcid.org/0000-0000-0000-0000" target="_blank" title="ORCID"><i class="fa-brands fa-orcid"></i></a>
-                    <a href="https://scholar.google.com" target="_blank" title="Google Scholar"><i class="fas fa-graduation-cap"></i></a>
+                    <a href="https://scholar.google.com/citations?user=ag_2tt4AAAAJ&hl=en" target="_blank" title="Google Scholar"><i class="fas fa-graduation-cap"></i></a>
                     <a href="https://www.linkedin.com" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
                     <a href="https://github.com/example" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
                 </div>
@@ -97,20 +97,34 @@
         </div>
 
         <div class="member">
-            <img src="/images/kedos.jpg" alt="Student 2">
+            <img src="/images/iremtopsakal.jpg" alt="Student 2">
             <div class="member-info">
-                <h3><a href="/team/student2/">Name Surname</a></h3>
+                <h3><a href="/team/student2/">İrem Topsakal</a></h3>
                 <p><strong>Education:</strong> M.Sc. in ...</p>
                 <p><strong>Research Area:</strong> Computational Materials Science...</p>
                 <div class="icons">
-                    <a href="mailto:student2@example.com"><i class="fas fa-envelope"></i></a>
-                    <a href="https://orcid.org/0000-0000-0000-0000" target="_blank"><i class="fa-brands fa-orcid"></i></a>
-                    <a href="https://scholar.google.com" target="_blank"><i class="fas fa-graduation-cap"></i></a>
-                    <a href="https://www.linkedin.com" target="_blank"><i class="fab fa-linkedin"></i></a>
+                    <a href="mailto:iremto@metu.edu.tr"><i class="fas fa-envelope"></i></a>
+                    <a href="www.linkedin.com/in/iremtopsakal" target="_blank"><i class="fab fa-linkedin"></i></a>
+                    <a href="https://github.com/iremtopsakal" target="_blank"><i class="fab fa-github"></i></a>
+                </div>
+            </div>
+        </div>
+
+        <div class="member">
+            <img src="/images/kedos.jpg" alt="Student 3">
+            <div class="member-info">
+                <h3><a href="/team/student3/">Name Surname</a></h3>
+                <p><strong>Education:</strong> M.Sc. in ...</p>
+                <p><strong>Research Area:</strong> Computational Materials Science...</p>
+                <div class="icons">
+                    <a href="mailto:example@example"><i class="fas fa-envelope"></i></a>
+                    <a href="www.linkedin.com/in/example" target="_blank"><i class="fab fa-linkedin"></i></a>
                     <a href="https://github.com/example" target="_blank"><i class="fab fa-github"></i></a>
                 </div>
             </div>
         </div>
+
+        
     </div>
 
     <!-- Footer -->
