--- a/team/index.html
+++ b/team/index.html
@@ -104,7 +104,7 @@
                 <p><strong>Research Area:</strong> Computational Materials Science...</p>
                 <div class="icons">
                     <a href="mailto:iremto@metu.edu.tr"><i class="fas fa-envelope"></i></a>
-                    <a href="www.linkedin.com/in/iremtopsakal" target="_blank"><i class="fab fa-linkedin"></i></a>
+                    <a href="https://www.linkedin.com/in/iremtopsakal" target="_blank"><i class="fab fa-linkedin"></i></a>
                     <a href="https://github.com/iremtopsakal" target="_blank"><i class="fab fa-github"></i></a>
                 </div>
             </div>
