--- a/contact/index.html
+++ b/contact/index.html
@@ -85,9 +85,9 @@
             <div class="contact-info">
                 <p><strong>Assist. Prof. Dr. Irmak Sargın</strong></p>
 		<p>Üniversiteler Mahallesi, Dumlupınar Bulvarı</p>
-                <p>Department of Metallurgical and Materials Engineering, B-206</p>
+                <p>Department of Metallurgical and Materials Engineering</p>
                 <p>Middle East Technical University</p>
-                <p>No:1, 06800</p>
+                <p>Room no:A-201, 06800</p>
                 <p>Ankara, Turkiye</p>
                 <p>Email: example@university.edu</p>
             </div>
