--- a/team/index.html
+++ b/team/index.html
@@ -83,7 +83,7 @@
         <div class="member">
             <img src="/images/ugurakbulut.jpg" alt="Student 1">
             <div class="member-info">
-                <h3><a href="/team/student1/">Rıza Uğur Akbulut</a></h3>
+                <h3><a href="/team/ugurakbulut/">Rıza Uğur Akbulut</a></h3>
                 <p><strong>Education:</strong> M.Sc. in ...</p>
                 <p><strong>Research Area:</strong> Computational Materials Science...</p>
                 <div class="icons">
@@ -99,7 +99,7 @@
         <div class="member">
             <img src="/images/iremtopsakal.jpg" alt="Student 2">
             <div class="member-info">
-                <h3><a href="/team/student2/">İrem Topsakal</a></h3>
+                <h3><a href="/team/iremtopsakal/">İrem Topsakal</a></h3>
                 <p><strong>Education:</strong> M.Sc. in ...</p>
                 <p><strong>Research Area:</strong> Computational Materials Science...</p>
                 <div class="icons">
