--- a/publications/index.html
+++ b/publications/index.html
@@ -1,89 +1,199 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MIStraLab - Publications</title>
-    <link rel="stylesheet" href="/css/style.css">
-    <style>
-        .section {
-            padding: 30px;
-            margin: 20px auto;
-            width: 95%;
-            max-width: 1100px;
-            background-color: white;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        }
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>MIStraLab - Publications</title>
+  <link rel="stylesheet" href="/css/style.css"/>
+  <style>
+    .section {
+      padding: 30px;
+      margin: 20px auto;
+      width: 95%;
+      max-width: 1100px;
+      background-color: white;
+      border-radius: 8px;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    }
 
-        h2 {
-            font-size: 36px;
-            text-align: center;
-            color: #002244;
-            margin-bottom: 20px;
-        }
+    h2 {
+      font-size: 36px;
+      text-align: center;
+      color: #002244;
+      margin-bottom: 20px;
+    }
 
-        .publications-list {
-            padding-left: 20px;
-        }
+    .filter-container {
+      text-align: center;
+      margin-bottom: 20px;
+    }
 
-        .publications-list li {
-            margin-bottom: 12px;
-            line-height: 1.6;
-        }
+    select {
+      padding: 8px 12px;
+      font-size: 16px;
+    }
 
-        .publications-list a {
-            color: #002244;
-            text-decoration: none;
-            font-weight: bold;
-        }
+    .year-group {
+      margin-bottom: 30px;
+    }
 
-        .publications-list a:hover {
-            text-decoration: underline;
-        }
-    </style>
+    .year-heading {
+      font-size: 24px;
+      font-weight: bold;
+      margin-bottom: 10px;
+      color: #002244;
+      border-bottom: 2px solid #ccc;
+      padding-bottom: 5px;
+    }
+
+    ul.publications-list {
+      list-style: none;
+      padding-left: 20px;
+      margin: 0;
+    }
+
+    .publications-list li {
+      margin-bottom: 12px;
+      line-height: 1.6;
+    }
+
+    .publications-list a {
+      color: #002244;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    .publications-list a:hover {
+      text-decoration: underline;
+    }
+
+    @media (max-width: 600px) {
+      h2 {
+        font-size: 28px;
+      }
+
+      .year-heading {
+        font-size: 20px;
+      }
+
+      select {
+        width: 100%;
+        max-width: 300px;
+      }
+    }
+  </style>
 </head>
 <body>
 
-    <!-- Navbar -->
-    <div id="navbar-placeholder"></div>
+  <!-- Navbar -->
+  <div id="navbar-placeholder"></div>
 
-    <div class="section">
-        <h2>Publications</h2>
-        <ul class="publications-list">
-            <li>
-                Doe, J., Sargin, I., et al. (2023). Title of the Research Paper. <em>Journal Name</em>. 
-                <a href="https://doi.org/10.1234/example1" target="_blank">[Link]</a>
-            </li>
-            <li>
-                Sargin, I., et al. (2021). Another Paper Title. <em>Advanced Materials</em>. 
-                <a href="https://doi.org/10.1234/example2" target="_blank">[Link]</a>
-            </li>
-            <li>
-                Example, A., Example, B. (2020). Some Other Paper. <em>Nature Materials</em>. 
-                <a href="https://doi.org/10.1234/example3" target="_blank">[Link]</a>
-            </li>
-            <li>
-                Researcher, X., Y., Z. (2019). Data-Driven Discovery. <em>Science</em>. 
-                <a href="https://doi.org/10.1234/example4" target="_blank">[Link]</a>
-            </li>
-            <!-- Add more publications as needed -->
-        </ul>
+  <div class="section">
+    <h2>Publications</h2>
+
+    <div class="filter-container">
+      <label for="yearFilter">Filter by year:</label>
+      <select id="yearFilter" onchange="filterPublications()">
+        <option value="all">All</option>
+        <option value="2023">2023</option>
+        <option value="2021">2021</option>
+        <option value="2020">2020</option>
+        <option value="2019">2019</option>
+      </select>
     </div>
 
-    <!-- Footer -->
-    <div id="footer-placeholder"></div>
+    <!-- Publication Year Groups -->
+    <div class="year-group" data-year="2023">
+      <div class="year-heading">2023</div>
+      <ul class="publications-list">
+        <li>
+          Doe, J., Sargin, I., et al. (2023). Title of the Research Paper. <em>Journal Name</em>. 
+          <a href="https://doi.org/10.1234/example1" target="_blank">[Link]</a>
+        </li>
+      </ul>
+    </div>
 
-    <!-- Navbar & Footer Loading -->
-    <script>
-        fetch('/partials/navbar.html')
-            .then(response => response.text())
-            .then(data => document.getElementById('navbar-placeholder').innerHTML = data);
+    <div class="year-group" data-year="2021">
+      <div class="year-heading">2021</div>
+      <ul class="publications-list">
+        <li>
+          Sargin, I., et al. (2021). Another Paper Title. <em>Advanced Materials</em>. 
+          <a href="https://doi.org/10.1234/example2" target="_blank">[Link]</a>
+        </li>
+      </ul>
+    </div>
 
-        fetch('/partials/footer.html')
-            .then(response => response.text())
-            .then(data => document.getElementById('footer-placeholder').innerHTML = data);
-    </script>
+    <div class="year-group" data-year="2020">
+      <div class="year-heading">2020</div>
+      <ul class="publications-list">
+        <li>
+          Example, A., Example, B. (2020). Some Other Paper. <em>Nature Materials</em>. 
+          <a href="https://doi.org/10.1234/example3" target="_blank">[Link]</a>
+        </li>
+      </ul>
+    </div>
+
+    <div class="year-group" data-year="2019">
+      <div class="year-heading">2019</div>
+      <ul class="publications-list">
+        <li>
+          Researcher, X., Y., Z. (2019). Data-Driven Discovery. <em>Science</em>. 
+          <a href="https://doi.org/10.1234/example4" target="_blank">[Link]</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+
+  <!-- Footer -->
+  <div id="footer-placeholder"></div>
+
+  <!-- Filter Script -->
+  <script>
+    function filterPublications() {
+      const selectedYear = document.getElementById("yearFilter").value;
+      const groups = document.querySelectorAll(".year-group");
+
+      groups.forEach(group => {
+        const year = group.getAttribute("data-year");
+        group.style.display = (selectedYear === "all" || selectedYear === year) ? "block" : "none";
+      });
+    }
+  </script>
+
+  <!-- Load Navbar and Footer HTML -->
+  <script>
+    fetch("/partials/navbar.html")
+      .then((response) => response.text())
+      .then((data) => {
+        document.getElementById("navbar-placeholder").innerHTML = data;
+
+        const toggle = document.getElementById("hamburger-toggle");
+        const links = document.getElementById("nav-links");
+
+        if (toggle && links) {
+          let isOpen = false;
+          toggle.addEventListener("click", () => {
+            if (!isOpen) {
+              links.classList.add("active");
+              isOpen = true;
+            } else {
+              links.classList.add("closing");
+              links.classList.remove("active");
+              setTimeout(() => {
+                links.classList.remove("closing");
+                isOpen = false;
+              }, 400);
+            }
+          });
+        }
+      });
+
+    fetch("/partials/footer.html")
+      .then((response) => response.text())
+      .then((data) => {
+        document.getElementById("footer-placeholder").innerHTML = data;
+      });
+  </script>
 
 </body>
 </html>
